--- a/src/index.css
+++ b/src/index.css
@@ -3,14 +3,25 @@
   line-height: 1.5;
   font-weight: 400;
 
+  --bg-color: hsl(0, 0%, 91%);
+  --bg-dark: hsl(0, 0%, 1%);
+  --accent: hsl(335, 75%, 37%);
+  --text-color: hsl(0, 0%, 95%);
+  --text-dark: hsl(0, 0%, 3%);
+
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: var(--text-color);
+  background-color: var(--bg-color);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 a {
@@ -28,6 +39,11 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+}
+section{
+  width: 100%;
+  min-height: 100vh;
+  padding-inline: 3vw;
 }
 
 h1 {
@@ -54,14 +70,49 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+::selection {
+  background: #A61853;
+  color: #fff;
+  -webkit-text-fill-color: #fff;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, .05);
+  border-radius: 99px;
+}
+
+::-webkit-scrollbar-track {
+  background: inherit;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    color: var(--text-color);
+  background-color: var(--bg-color);
   }
+
   a:hover {
-    color: #747bff;
+    color: var(--accent);
   }
+
+  button {
+    background-color: #f9f9f9;
+  }
+}
+@media (prefers-color-scheme: dark) {
+  :root {
+    color: var(--text-dark);
+  background-color: var(--bg-dark);
+  }
+
+  a:hover {
+    color: var(--accent);
+  }
+
   button {
     background-color: #f9f9f9;
   }
