-font file added -type scaling added

--- a/src/Style/contact.scss
+++ b/src/Style/contact.scss
@@ -11,6 +11,8 @@
   width: 100%;
 //   max-width: 350px;
   height: fit-content;
+  border-radius: 25px;
+    overflow: hidden;
 }
 .cont-form {
 //   width: 50%;
