--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,5 @@
-
+.hollow{
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: var(--text-color);
+}
