--- a/src/Style/contact.css
+++ b/src/Style/contact.css
@@ -13,6 +13,8 @@
   width: 100%;
   height: -moz-fit-content;
   height: fit-content;
+  border-radius: 25px;
+  overflow: hidden;
 }
 
 .cont-form {
