--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,5 @@
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: var(--text-color);
+    text-transform: uppercase;
 }
