--- a/src/Style/contact.css
+++ b/src/Style/contact.css
@@ -7,6 +7,8 @@
   align-items: center;
   grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
   grid-template-rows: 1fr;
+  -moz-column-gap: 3vw;
+       column-gap: 3vw;
 }
 
 .cont-map {
@@ -18,31 +20,31 @@
 }
 
 .cont-form {
-  height: -moz-fit-content;
-  height: fit-content;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
 #contact-form {
   min-height: 400px;
   color: #fff;
-  padding: 20px;
+  padding-block: 20px;
 }
 #contact-form input, #contact-form textarea {
   width: 100%;
   border: 0;
-  padding: 10px 5px;
-  box-sizing: border-box;
+  padding: 12px 16px;
   margin-bottom: 15px !important;
-  border-radius: 2px;
+  border-radius: 20px;
   background: none;
-  border-bottom: groove;
-  transition: border-color 0.5s ease-out;
+  border: 1px solid;
 }
 #contact-form input:focus-visible, #contact-form textarea:focus-visible {
   outline: none;
 }
 #contact-form textarea {
-  height: 70px;
+  height: 120px;
   resize: vertical;
 }
 #contact-form button {
