--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,14 @@
   font-family: 'MonumentUltrabold';
   src: url(./MonumentExtended-Ultrabold.woff2) format('woff2');
 }
+
 @font-face {
   font-family: 'MonumentRegular';
   src: url(./MonumentRegular.woff2) format('woff2');
 }
 
 :root {
-  font-family: "MonumentRegular",'MonumentUltrabold', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "MonumentRegular", 'MonumentUltrabold', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1;
   font-weight: 400;
 
@@ -27,11 +28,12 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-*{
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "MonumentRegular",'MonumentUltrabold', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "MonumentRegular", 'MonumentUltrabold', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 
 a {
@@ -39,6 +41,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -50,16 +53,30 @@ body {
   min-width: 320px;
   min-height: 100vh;
 }
-section{
+
+section {
   width: 100%;
   min-height: 100vh;
   padding-inline: 3vw;
 }
+
 /* body            { font-size: calc(0.96428571rem + 0.17857143vw); } */
-h1              { font-size: 6.25rem}
-h2              { font-size: 4.4rem }
-h3              { font-size: 2.6rem }
-h4              { font-size: 1.5rem }
+h1 {
+  font-size: 5.25rem;
+}
+
+h2 {
+  font-size: 4.4rem;
+}
+
+h3 {
+  font-size: 2.6rem;
+}
+
+h4 {
+  font-size: 1.5rem;
+  text-transform: uppercase;
+}
 
 /* @media (min-width: 90em) {
     body            { font-size: 1.125rem; }
@@ -115,7 +132,7 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: var(--text-dark);
-  background-color: var(--bg-color);
+    background-color: var(--bg-color);
   }
 
   a:hover {
@@ -125,18 +142,19 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-  .hollow{
+
+  .hollow {
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: var(--text-dark);
-}
+  }
 
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     color: var(--text-color);
-  background-color: var(--bg-dark);
+    background-color: var(--bg-dark);
   }
 
   a:hover {
@@ -146,10 +164,11 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-  .hollow{
+
+  .hollow {
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: var(--text-color);
-}
+  }
 
 }
