--- a/src/Style/contact.css
+++ b/src/Style/contact.css
@@ -107,4 +107,43 @@
 .contact-text h1 {
   font-size: 12vw;
   text-transform: capitalize;
+}
+
+.cont-info {
+  width: 100vw;
+  min-height: 90vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding-inline: 10vw;
+}
+
+.cont-info-text {
+  display: flex;
+  flex-direction: column;
+}
+.cont-info-text h1 {
+  color: gray;
+  text-align: right;
+  margin-right: -9vw;
+}
+.cont-info-text h3 {
+  text-transform: uppercase;
+}
+
+.cont-detail ul {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.cont-detail ul li h5 {
+  font-size: 17px;
+  margin-block: 1em;
+  text-transform: uppercase;
+}
+.cont-detail ul li svg {
+  margin-bottom: 1em;
 }/*# sourceMappingURL=contact.css.map */
