--- a/src/Style/contact.scss
+++ b/src/Style/contact.scss
@@ -159,3 +159,49 @@
         z-index: -1;
     } */
 }
+
+
+.cont-info{
+    width: 100vw;
+    min-height: 90vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding-inline: 10vw;
+}
+
+.cont-info-text{
+    display: flex;
+    flex-direction: column;
+
+    h1{
+        color: gray;
+        text-align: right;
+        margin-right: -9vw;
+    }
+    h3{
+        text-transform: uppercase;
+    }
+}
+
+.cont-detail{
+ul{
+    width: 100%;
+    height: 200px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+
+    li{
+        h5{
+            font-size: 17px;
+            margin-block: 1em;
+            text-transform: uppercase;
+        }
+        svg{
+            margin-bottom: 1em;
+        }
+    }
+}
+}
