polished responsiveness for contact page

--- a/src/Style/contact.css
+++ b/src/Style/contact.css
@@ -18,6 +18,9 @@
   border-radius: 25px;
   overflow: hidden;
 }
+.cont-map div div {
+  height: 700px;
+}
 
 .cont-form {
   height: 100%;
@@ -121,10 +124,12 @@
 .cont-info-text {
   display: flex;
   flex-direction: column;
+  row-gap: 20px;
 }
 .cont-info-text h1 {
-  color: gray;
+  -webkit-text-stroke-color: hsl(0, 0%, 50%);
   text-align: right;
+  font-size: clamp(4.25rem, 10vw, 10.25rem);
   margin-right: -9vw;
 }
 .cont-info-text h3 {
@@ -133,11 +138,11 @@
 
 .cont-detail ul {
   width: 100%;
-  height: 200px;
   display: flex;
   flex-direction: row;
-  align-items: center;
   justify-content: space-between;
+  align-items: baseline;
+  margin-block: 5vh;
 }
 .cont-detail ul li h5 {
   font-size: 17px;
@@ -146,4 +151,29 @@
 }
 .cont-detail ul li svg {
   margin-bottom: 1em;
+}
+
+@media (max-width: 1100px) {
+  .contact-main {
+    row-gap: 5vh;
+  }
+  .cont-form {
+    padding-inline: 5%;
+    row-gap: 20px;
+  }
+  .cont-map {
+    order: 1;
+    width: 90%;
+    justify-self: center;
+  }
+  .cont-map div div {
+    height: 500px;
+  }
+  .cont-detail ul {
+    flex-direction: column;
+    row-gap: 30px;
+    align-items: baseline;
+    margin-block: 5vh;
+    /* align-content: flex-start; */
+  }
 }/*# sourceMappingURL=contact.css.map */
