--- a/src/index.css
+++ b/src/index.css
@@ -51,11 +51,9 @@ a:hover {
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  width: calc(100vw - 5px);
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 section {
@@ -67,7 +65,7 @@ section {
 
 /* body            { font-size: calc(0.96428571rem + 0.17857143vw); } */
 h1 {
-  font-size: 5.25rem;
+  font-size: clamp(3.25rem, 5vw, 5.25rem);
 }
 
 h2 {
