--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'MonumentUltrabold';
-  src: url(./MonumentExtended-Ultrabold.woff2) format('woff2');
+  src: url(./MonumentUltrabold.woff2) format('woff2');
 }
 
 @font-face {
