--- a/src/Style/Component/Component.scss
+++ b/src/Style/Component/Component.scss
@@ -1,30 +1,46 @@
 // For overlay comp
 
-.over-cont{
-    position: fixed;
-    right: 0;
-    top: 200px;
-    writing-mode: vertical-lr;
-    padding-block: 10px;
+.over-cont {
+  position: fixed;
+  right: 0;
+  top: 200px;
+  writing-mode: vertical-lr;
+  padding-block: 20px;
+  z-index: 10;
 }
 
-.over-scroll{
-    position: fixed;
-    left: 0;
-    bottom: 100px;
-    writing-mode: vertical-lr;
-    padding-block: 10px;
-}
-aside p{
-    transition: all .5s ease;
-    font-family: "MonumentRegular";
-    letter-spacing: 5px;
-    font-size: 10px;
-}
-.over-cont:hover,.over-scroll:hover{
-    p{
-        color: var(--accent);
-        transform: translateY(10px);
-        cursor:help;
+.over-scroll {
+  position: fixed;
+  left: 0;
+  bottom: 40px;
+  writing-mode: vertical-lr;
+  padding-block: 20px;
+  z-index: 10;
+
+  p {
+    letter-spacing: 7px;
+    font-size: 7px;
+    &::before {
+      content: "";
+      position: absolute;
+      bottom: -45px;
+      height: 100px;
+      width: 15px;
+      border-right: 1px solid;
     }
+  }
+}
+aside p {
+  transition: all 0.5s ease;
+  font-family: "MonumentRegular";
+  letter-spacing: 5px;
+  font-size: 10px;
+}
+.over-cont:hover,
+.over-scroll:hover {
+  p {
+    color: var(--accent);
+    transform: translateY(10px);
+    cursor: help;
+  }
 }
