--- a/src/Style/Home/Home.css
+++ b/src/Style/Home/Home.css
@@ -3,6 +3,23 @@
   flex-direction: column;
   justify-content: center;
   padding-inline: 15vw;
+  background-color: rgba(0, 0, 0, 0.9098039216);
+}
+.hero::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  inset: 0;
+  background: url(/bg.webp);
+  background-size: cover;
+  z-index: -1;
+}
+.hero > img {
+  width: 500px;
+  position: absolute;
+  bottom: -250px;
+  left: 0;
 }
 
 .hero-head {
@@ -18,10 +35,36 @@
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 30px;
-  filter: grayscale(1) brightness(0.7);
+  filter: grayscale(1) brightness(0.5);
   opacity: 0.4;
 }
 
 .hero-cta {
   align-self: end;
+}
+
+@media (max-width: 800px) {
+  .hero {
+    padding-inline: 10vw;
+    justify-content: space-around;
+  }
+  .hero > img {
+    width: 250px;
+    position: absolute;
+    bottom: -100px;
+  }
+  .hero-head video {
+    height: 250px;
+    margin-right: 70px;
+  }
+}
+@media (max-width: 450px) {
+  .hero {
+    padding-inline: 5vw;
+  }
+  .hero > img {
+    width: 250px;
+    position: absolute;
+    bottom: -300px;
+  }
 }/*# sourceMappingURL=Home.css.map */
