--- a/src/Style/Home/Home.scss
+++ b/src/Style/Home/Home.scss
@@ -1,8 +1,28 @@
 .hero {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding-inline: 15vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-inline: 15vw;
+  background-color: #000000e8;
+  
+
+  &::before{
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    inset: 0;
+    background: url(/bg.webp);
+    background-size: cover;
+    z-index: -1;
+  }
+
+  & > img {
+    width: 500px;
+    position: absolute;
+    bottom: -250px;
+    left: 0;
+  }
 }
 .hero-head {
   position: relative;
@@ -16,10 +36,37 @@
     right: 0;
     object-fit: cover;
     border-radius: 30px;
-    filter: grayscale(1) brightness(0.7);
+    filter: grayscale(1) brightness(0.5);
     opacity: 0.4;
   }
 }
-.hero-cta{
-    align-self: end;
+.hero-cta {
+  align-self: end;
+}
+
+@media (max-width: 800px) {
+    .hero{
+        padding-inline: 10vw;
+        justify-content: space-around;
+
+        & > img {
+            width: 250px;
+            position: absolute;
+            bottom: -100px;
+        }
+    }
+    .hero-head video {
+        height: 250px;
+        margin-right: 70px;
+    }
+}
+@media (max-width: 450px) {
+    .hero{
+        padding-inline: 5vw;
+        & > img {
+            width: 250px;
+            position: absolute;
+            bottom: -300px;
+        }
+    }
 }
