--- a/src/Style/Home/Home.scss
+++ b/src/Style/Home/Home.scss
@@ -4,9 +4,8 @@
   justify-content: center;
   padding-inline: 15vw;
   background-color: #000000e8;
-  
 
-  &::before{
+  &::before {
     content: "";
     width: 100%;
     height: 100%;
@@ -44,29 +43,38 @@
   align-self: end;
 }
 
-@media (max-width: 800px) {
-    .hero{
-        padding-inline: 10vw;
-        justify-content: space-around;
+//Scene canvas
+#canvasWrapper {
+  width: calc(100vw - 5px);
+  height: 100vh;
+  position: absolute;
+  inset: 0;
+  padding: 0;
+}
 
-        & > img {
-            width: 250px;
-            position: absolute;
-            bottom: -100px;
-        }
+@media (max-width: 800px) {
+  .hero {
+    padding-inline: 10vw;
+    justify-content: space-around;
+
+    & > img {
+      width: 250px;
+      position: absolute;
+      bottom: -100px;
     }
-    .hero-head video {
-        height: 250px;
-        margin-right: 70px;
-    }
+  }
+  .hero-head video {
+    height: 250px;
+    margin-right: 70px;
+  }
 }
 @media (max-width: 450px) {
-    .hero{
-        padding-inline: 5vw;
-        & > img {
-            width: 250px;
-            position: absolute;
-            bottom: -300px;
-        }
+  .hero {
+    padding-inline: 5vw;
+    & > img {
+      width: 250px;
+      position: absolute;
+      bottom: -300px;
     }
+  }
 }
