--- a/src/Style/Home/Home.css
+++ b/src/Style/Home/Home.css
@@ -22,21 +22,23 @@
   left: 0;
 }
 
-.hero-head {
-  position: relative;
-  align-self: start;
-}
-.hero-head video {
+.hero-vid {
   width: 200px;
   height: 300px;
   position: absolute;
-  top: -50px;
-  right: 0;
+  top: 20%;
+  left: 40%;
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 30px;
-  filter: grayscale(1) brightness(0.5);
-  opacity: 0.4;
+  filter: grayscale(1) brightness(0.25);
+  z-index: 0;
+}
+
+.hero-head {
+  position: relative;
+  align-self: start;
+  z-index: 1;
 }
 
 .hero-cta {
@@ -49,6 +51,7 @@
   position: absolute;
   inset: 0;
   padding: 0;
+  z-index: 0;
 }
 
 @media (max-width: 800px) {
@@ -61,9 +64,10 @@
     position: absolute;
     bottom: -100px;
   }
-  .hero-head video {
+  .hero-vid {
     height: 250px;
     margin-right: 70px;
+    top: 15%;
   }
 }
 @media (max-width: 450px) {
