--- a/src/Style/Home/Home.scss
+++ b/src/Style/Home/Home.scss
@@ -23,21 +23,21 @@
     left: 0;
   }
 }
+.hero-vid {
+  width: 200px;
+  height: 300px;
+  position: absolute;
+  top: 20%;
+  left: 40%;
+  object-fit: cover;
+  border-radius: 30px;
+  filter: grayscale(1) brightness(0.25);
+  z-index: 0;
+}
 .hero-head {
   position: relative;
   align-self: start;
-
-  video {
-    width: 200px;
-    height: 300px;
-    position: absolute;
-    top: -50px;
-    right: 0;
-    object-fit: cover;
-    border-radius: 30px;
-    filter: grayscale(1) brightness(0.5);
-    opacity: 0.4;
-  }
+  z-index: 1;
 }
 .hero-cta {
   align-self: end;
@@ -50,6 +50,7 @@
   position: absolute;
   inset: 0;
   padding: 0;
+  z-index: 0;
 }
 
 @media (max-width: 800px) {
@@ -63,9 +64,10 @@
       bottom: -100px;
     }
   }
-  .hero-head video {
+  .hero-vid {
     height: 250px;
     margin-right: 70px;
+    top: 15%;
   }
 }
 @media (max-width: 450px) {
