--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,28 @@
     -webkit-text-stroke-color: var(--text-color);
     text-transform: uppercase;
 }
+
+button {
+    width: 80%;
+    border-radius: 20px;
+    border: 1px solid var(--accent);
+    padding: 1.25em;
+    color: var(--accent);
+    font-size: 0.7em;
+    font-weight: 500;
+    font-family: inherit;
+    background-color: var(--bg-light);
+    cursor: pointer;
+    transition: border-color 0.25s;
+    margin-block: 1.25em;
+  }
+  
+  button:hover {
+    border-color: hsla(335, 90%, 60%, 0.35);
+  }
+  
+  button:focus,
+  button:focus-visible {
+    outline: 4px auto -webkit-focus-ring-color;
+  }
+  
