--- a/src/Style/Component/Component.css
+++ b/src/Style/Component/Component.css
@@ -33,6 +33,8 @@ aside p {
   font-family: "MonumentRegular";
   letter-spacing: 5px;
   font-size: 10px;
+  text-transform: uppercase;
+  opacity: 0.5;
 }
 
 .over-cont:hover p,
@@ -40,4 +42,26 @@ aside p {
   color: var(--accent);
   transform: translateY(10px);
   cursor: help;
+  opacity: 1;
+}
+
+.base-input {
+  transition: border-color 0.5s;
+  outline: none;
+  position: relative;
+}
+
+.overlay-input {
+  pointer-events: none;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  border: 1px solid rgb(193, 35, 146);
+  border-radius: inherit;
+  background-color: transparent;
+  opacity: 0;
+  transition: opacity 0.5s;
 }/*# sourceMappingURL=Component.css.map */
