--- a/src/Style/Component/Component.scss
+++ b/src/Style/Component/Component.scss
@@ -35,6 +35,8 @@ aside p {
   font-family: "MonumentRegular";
   letter-spacing: 5px;
   font-size: 10px;
+  text-transform: uppercase;
+  opacity: 0.5;
 }
 .over-cont:hover,
 .over-scroll:hover {
@@ -42,5 +44,30 @@ aside p {
     color: var(--accent);
     transform: translateY(10px);
     cursor: help;
+    opacity: 1;
   }
+}
+
+
+
+//spotlight button
+.base-input {
+  transition: border-color 0.5s;
+  outline: none;
+  position: relative;
+}
+.overlay-input {
+  pointer-events: none;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  border: 1px solid rgb(193, 35, 146);
+  border-radius: inherit;
+  background-color: transparent;
+  // padding: 0.875rem;
+  opacity: 0;
+  transition: opacity 0.5s;
 }
