--- a/src/Style/Home/Home.css
+++ b/src/Style/Home/Home.css
@@ -3,16 +3,25 @@
   flex-direction: column;
   justify-content: center;
   padding-inline: 10vw;
-  background-color: rgba(0, 0, 0, 0.9098039216);
+  position: relative;
 }
 .hero::before {
   content: "";
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   inset: 0;
   background: url(/bg.webp);
   background-size: cover;
+  z-index: -2;
+}
+.hero::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.9098039216);
   z-index: -1;
 }
 .hero > img {
@@ -25,13 +34,15 @@
 .hero-vid {
   width: 220px;
   height: 300px;
-  position: absolute;
+  position: fixed;
   top: 10%;
-  left: 45%;
+  left: 50%;
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 30px;
   filter: grayscale(1) brightness(0.25);
+  transition: all 0.3s ease-out;
+  transform: translate(-50%, 0);
   z-index: 0;
 }
 
@@ -48,10 +59,19 @@
 #canvasWrapper {
   width: calc(100vw - 5px);
   height: 100vh;
-  position: absolute;
+  position: fixed;
   inset: 0;
   padding: 0;
   z-index: 0;
+}
+
+.vid {
+  height: 100vh;
+}
+
+.textline h2 {
+  float: right;
+  text-transform: uppercase;
 }
 
 @media (max-width: 800px) {
