--- a/src/Style/Home/Home.scss
+++ b/src/Style/Home/Home.scss
@@ -3,16 +3,25 @@
   flex-direction: column;
   justify-content: center;
   padding-inline: 10vw;
-  background-color: #000000e8;
+  position: relative;
 
   &::before {
     content: "";
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     inset: 0;
     background: url(/bg.webp);
     background-size: cover;
+    z-index: -2;
+  }
+  &::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    inset: 0;
+    background-color: rgba(0, 0, 0, 0.9098039216);
     z-index: -1;
   }
 
@@ -26,12 +35,14 @@
 .hero-vid {
   width: 220px;
   height: 300px;
-  position: absolute;
+  position: fixed;
   top: 10%;
-  left: 45%;
+  left: 50%;
   object-fit: cover;
   border-radius: 30px;
   filter: grayscale(1) brightness(0.25);
+  transition: all 0.3s ease-out;
+  transform: translate(-50%, 0);
   z-index: 0;
 }
 .hero-head {
@@ -47,12 +58,24 @@
 #canvasWrapper {
   width: calc(100vw - 5px);
   height: 100vh;
-  position: absolute;
+  position: fixed;
   inset: 0;
   padding: 0;
   z-index: 0;
 }
 
+.vid {
+  height: 100vh;
+}
+
+.textline {
+  h2 {
+    float: right;
+    text-transform: uppercase;
+  }
+}
+
+// Media query
 @media (max-width: 800px) {
   .hero {
     padding-inline: 10vw;
