--- a/src/Style/Home/Home.css
+++ b/src/Style/Home/Home.css
@@ -73,6 +73,24 @@
   float: right;
   text-transform: uppercase;
 }
+.textline .paragraph {
+  display: flex;
+  flex-direction: column;
+  line-height: 1;
+  flex-wrap: wrap;
+}
+.textline .paragraph .word {
+  position: relative;
+  margin-right: 12px;
+  margin-top: 12px;
+}
+.textline .paragraph .word .shadow {
+  position: absolute;
+  opacity: 20%;
+}
+.textline .paragraph .word span span {
+  transition: all 0.2s ease;
+}
 
 @media (max-width: 800px) {
   .hero {
