--- a/src/Style/Home/Home.scss
+++ b/src/Style/Home/Home.scss
@@ -81,7 +81,7 @@
     line-height: 1;
     flex-wrap: wrap;
     filter: invert(1);
-    z-index: 1;
+    z-index: 2;
 
     .word {
       position: relative;
@@ -92,8 +92,8 @@
         position: absolute;
         opacity: 20%;
       }
-      span{
-        span{
+      span {
+        span {
           transition: all 0.2s ease;
         }
       }
@@ -101,13 +101,31 @@
   }
 }
 
-.scale{
+.scaleSec{
+  position: relative;
+  padding: 0;
+}
+.scale {
   background-color: white;
   // position: relative;
   height: 100vh;
   width: 100vw;
   scale: 1;
-    // z-index: 0;
+  inset: 0;
+  z-index: 1;
+}
+
+.redText {
+  .text {
+    position: relative;
+  }
+  .redOverlay {
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #a61853e6;
+  }
 }
 
 // Media query
