--- a/src/Style/Home/Home.scss
+++ b/src/Style/Home/Home.scss
@@ -118,13 +118,29 @@
 .redText {
   .text {
     position: relative;
+    width: 60%;
+    margin: auto;
+    padding: 1em;
+    text-transform: uppercase;
+    z-index: 2;
   }
   .redOverlay {
     position: absolute;
     inset: 0;
     width: 100%;
     height: 100%;
-    background-color: #a61853e6;
+    background-color: rgb(159 1 66 / 70%);
+    mix-blend-mode: hard-light;
+  }
+}
+
+
+.videoSec{
+  .mainVid{
+    z-index: 2;
+    position: relative;
+    border-radius: 30px;
+    translate: 50% 0;
   }
 }
 
