--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 button {
     width: 80%;
     border-radius: 20px;
-    border: 1px solid var(--accent);
+    border: 2px solid var(--accent);
     padding: 1.25em;
     color: var(--accent);
     font-size: 0.7em;
@@ -18,11 +18,12 @@ button {
     cursor: pointer;
     transition: border-color 0.25s;
     margin-block: 1.25em;
-    z-index: 2;
+    z-index: 5;
   }
   
   button:hover {
     border-color: hsla(335, 90%, 60%, 0.35);
+    cursor: pointer;
   }
   
   button:focus,
