--- a/src/Style/Home/Home.css
+++ b/src/Style/Home/Home.css
@@ -63,6 +63,10 @@
   inset: 0;
   padding: 0;
   z-index: 0;
+  pointer-events: none;
+}
+#canvasWrapper > div {
+  pointer-events: none !important;
 }
 
 .vid {
@@ -134,6 +138,50 @@
   inset: 0 50%;
   translate: -50% 0;
   transform-origin: bottom center;
+}
+
+.product {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: stretch;
+  z-index: 2;
+}
+.product .prodHead {
+  text-transform: uppercase;
+  color: black;
+}
+.product .prodHead .hollow {
+  -webkit-text-stroke-color: var(--text-dark);
+}
+.product .prodHead h2 {
+  float: right;
+}
+.product .prodHead p {
+  width: -moz-fit-content;
+  width: fit-content;
+  margin-top: 25px;
+}
+.product .prodHead .prodBtn {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: right;
+  gap: 30px;
+  float: right;
+}
+.product .prodHead .prodBtn button {
+  width: 250px;
+}
+.product .prodHead .prodBtn img {
+  width: 50px;
+  rotate: 45deg;
+  border-radius: 50%;
+  transition: all 0.5s ease;
+}
+.product .prodHead .prodBtn img:hover {
+  box-shadow: 0px 0px 5px #a61853;
 }
 
 @media (max-width: 800px) {
