--- a/src/Style/Component/Component.scss
+++ b/src/Style/Component/Component.scss
@@ -48,8 +48,6 @@ aside p {
   }
 }
 
-
-
 //spotlight button
 .primary-btn {
   padding: 10px 20px;
@@ -69,7 +67,7 @@ aside p {
   z-index: 10;
   width: 100%;
   height: 100%;
-  border: 2px solid rgb(193, 35, 146);
+  border: 2px solid var(--accent);
   border-radius: inherit;
   background-color: transparent;
   // padding: 0.875rem;
@@ -77,7 +75,7 @@ aside p {
   transition: opacity 0.5s;
 }
 
-& .mgBtn {
+.mgBtn {
   // position: absolute;
   // bottom: calc(0% - 15vh);
   // left: 50%;
@@ -174,9 +172,8 @@ aside p {
   }
 }
 
-
 // SCroll paragraph
-.paragraph{
+.paragraph {
   display: flex;
   font-size: 60px;
   line-height: 1;
@@ -184,13 +181,97 @@ aside p {
   max-width: 1280px;
   color: white;
   flex-wrap: wrap;
-  .word{
+  .word {
     position: relative;
     margin-right: 12px;
     margin-top: 12px;
-    .shadow{
+    .shadow {
       position: absolute;
       opacity: 20%;
+    }
+  }
+}
+
+//product list
+@property --wipe-position {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 100%;
+}
+
+.wipe {
+  --wipe-position: 100%;
+  --gradient-length: 20%;
+  -webkit-mask-image: linear-gradient(
+    to bottom,
+    black var(--wipe-position),
+    transparent calc(var(--wipe-position) + var(--gradient-length)),
+    transparent
+  );
+
+  transition: --wipe-position 2000ms linear;
+}
+
+// .wipe:hover {
+//   --wipe-position: calc(-1 * var(--gradient-length));
+// }
+
+// .listItem:has(> :hover):not(:hover) .imgWrap{
+//   opacity: 0.25;
+// }
+.list {
+  position: relative;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+
+  span {
+    position: absolute;
+    top: -400px;
+    left: 50%;
+    translate: -50%;
+    rotate: -90deg;
+    transform: scale(1.3);
+    z-index: -1;
+  }
+  // .listItem:hover .imgWrap {
+  //   transform: scale(1.4);
+  // }
+  
+  // .listItem:not(:hover) .imgWrap {
+  //   transform: scale(1); /* Reset the scale for non-hovered items */
+  // }
+
+  .listItem {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: 250px;
+    color: black;
+    text-transform: uppercase;
+    background: white;
+
+    &:hover .imgWrap {
+      outline: 2px solid var(--accent);
+      box-shadow: 0px 0px 10px #a61853;
+      scale: 1.01;
+    }
+    
+    // &:hover:not(:hover) .imgWrap {
+    //   scale: 1.4;
+    // }
+    .imgWrap {
+      border-radius: 50%;
+      outline: 2px solid black;
+      background-color: white;
+      transition: all 0.5s ease;
+    }
+    img {
+      width: 200px;
+      -o-object-fit: scale-down;
+      object-fit: scale-down;
+      aspect-ratio: 1 / 1;
     }
   }
 }
