--- a/src/Style/Home/Home.css
+++ b/src/Style/Home/Home.css
@@ -144,7 +144,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: space-around;
   align-items: stretch;
   z-index: 2;
 }
@@ -182,6 +182,7 @@
 }
 .product .prodHead .prodBtn img:hover {
   box-shadow: 0px 0px 5px #a61853;
+  rotate: 0deg;
 }
 
 @media (max-width: 800px) {
