--- a/src/index.css
+++ b/src/index.css
@@ -94,6 +94,13 @@ h4 {
   text-transform: uppercase;
 }
 
+h5{
+  font-size: 1.1em;
+}
+h6{
+  font-size: 1em;
+}
+
 p {
   font-family: 'Neue', Inter, system-ui, Avenir;
   font-size: 14px;
@@ -111,32 +118,9 @@ ul li {
     h2              { font-size: 2.58445946rem; }
 } */
 
-/* h1 {
-  font-size: 5em;
-  line-height: 0.8;
-} */
-
-/* button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-} */
 
 ::selection {
-  background: #A61853;
+  background: var(--accent);
   color: #fff;
   -webkit-text-fill-color: #fff;
 }
