--- a/src/Style/Component/Component.css
+++ b/src/Style/Component/Component.css
@@ -166,10 +166,25 @@ aside p {
   box-shadow: 0px 0px 10px #a61853;
   scale: 1.01;
 }
+.list .listItem:hover .imgWrap button {
+  scale: 1;
+}
+.list .listItem:hover .imgWrap img {
+  filter: blur(2px) opacity(0.4);
+}
 .list .listItem .imgWrap {
+  position: relative;
   border-radius: 50%;
   outline: 2px solid black;
   background-color: white;
+  transition: all 0.5s ease;
+}
+.list .listItem .imgWrap button {
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  translate: -50%;
+  scale: 0;
   transition: all 0.5s ease;
 }
 .list .listItem img {
@@ -177,4 +192,5 @@ aside p {
   -o-object-fit: scale-down;
   object-fit: scale-down;
   aspect-ratio: 1/1;
+  transition: all 0.8s ease;
 }/*# sourceMappingURL=Component.css.map */
