--- a/src/Style/Component/Component.scss
+++ b/src/Style/Component/Component.scss
@@ -237,7 +237,7 @@ aside p {
   // .listItem:hover .imgWrap {
   //   transform: scale(1.4);
   // }
-  
+
   // .listItem:not(:hover) .imgWrap {
   //   transform: scale(1); /* Reset the scale for non-hovered items */
   // }
@@ -257,21 +257,38 @@ aside p {
       box-shadow: 0px 0px 10px #a61853;
       scale: 1.01;
     }
-    
+    &:hover .imgWrap button {
+      scale: 1;
+    }
+    &:hover .imgWrap img {
+      filter: blur(2px) opacity(0.4);
+    }
+
     // &:hover:not(:hover) .imgWrap {
     //   scale: 1.4;
     // }
     .imgWrap {
+      position: relative;
       border-radius: 50%;
       outline: 2px solid black;
       background-color: white;
       transition: all 0.5s ease;
+
+      button {
+        position: absolute;
+        top: 35%;
+        left: 50%;
+        translate: -50%;
+        scale: 0;
+        transition: all 0.5s ease;
+      }
     }
     img {
       width: 200px;
       -o-object-fit: scale-down;
       object-fit: scale-down;
       aspect-ratio: 1 / 1;
+      transition: all 0.8s ease;
     }
   }
 }
