--- a/src/Style/Home/Home.scss
+++ b/src/Style/Home/Home.scss
@@ -62,10 +62,10 @@
   inset: 0;
   padding: 0;
   z-index: 0;
-  pointer-events: none;
+  // pointer-events: none;
 
   & > div {
-    pointer-events: none !important;
+    // pointer-events: none !important;
   }
 }
 
