--- a/src/Style/Home/Home.scss
+++ b/src/Style/Home/Home.scss
@@ -64,9 +64,9 @@
   z-index: 0;
   // pointer-events: none;
 
-  & > div {
-    // pointer-events: none !important;
-  }
+  // & > div {
+  //   // pointer-events: none !important;
+  // }
 }
 
 .vid {
