--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,16 @@
 @font-face {
   font-family: 'MonumentUltrabold';
-  src: url(./MonumentUltrabold.woff2) format('woff2');
+  src: url(/MonumentUltrabold.woff2) format('woff2');
 }
 
 @font-face {
   font-family: 'MonumentRegular';
-  src: url(./MonumentRegular.woff2) format('woff2');
+  src: url(/MonumentRegular.woff2) format('woff2');
 }
 
 @font-face {
   font-family: 'Neue';
-  src: url(./neue.woff2) format('woff2');
+  src: url(/neue.woff2) format('woff2');
 }
 
 :root {
