--- a/src/Style/Component/Component.css
+++ b/src/Style/Component/Component.css
@@ -107,6 +107,14 @@ aside p {
 
 .arrow {
   margin: 2em;
+  width: 50px;
+  rotate: 45deg;
+  border-radius: 50%;
+  transition: all 0.5s ease;
+}
+.arrow:hover {
+  box-shadow: 0px 0px 5px #a61853;
+  rotate: 0deg;
 }
 
 .paragraph {
@@ -199,8 +207,40 @@ aside p {
 }
 
 .blog {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   z-index: 3;
   position: relative;
   color: black;
   text-transform: uppercase;
+}
+.blog .post {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  padding-block: 2vh;
+  border-bottom: 1px solid grey;
+  filter: opacity(0.5);
+  transition: all 0.5s ease-in-out;
+}
+.blog .post:hover {
+  filter: opacity(1);
+  cursor: pointer;
+}
+.blog .post:last-of-type {
+  border-bottom: 1px solid rgba(128, 128, 128, 0);
+}
+.blog .metaInfo {
+  display: inline-flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+.blog .blogTitle {
+  max-width: 45ch;
+  text-align: left;
+  width: 100%;
 }/*# sourceMappingURL=Component.css.map */
