--- a/src/Style/Component/Component.scss
+++ b/src/Style/Component/Component.scss
@@ -171,8 +171,17 @@ aside p {
     }
   }
 }
-.arrow{
+.arrow {
   margin: 2em;
+  width: 50px;
+  rotate: 45deg;
+  border-radius: 50%;
+  transition: all 0.5s ease;
+
+  &:hover {
+    box-shadow: 0px 0px 5px #a61853;
+    rotate: 0deg;
+  }
 }
 
 // SCroll paragraph
@@ -295,10 +304,42 @@ aside p {
   }
 }
 
-
-.blog{
+.blog {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   z-index: 3;
   position: relative;
   color: black;
   text-transform: uppercase;
+
+  .post {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    padding-block: 2vh;
+    border-bottom: 1px solid grey;
+    filter: opacity(0.5);
+    transition: all 0.5s ease-in-out;
+    &:hover {
+      filter: opacity(1);
+      cursor: pointer;
+    }
+    &:last-of-type {
+      border-bottom: 1px solid rgba(128, 128, 128, 0);
+    }
+  }
+  .metaInfo {
+    display: inline-flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 10px;
+  }
+  .blogTitle {
+    max-width: 45ch;
+    text-align: left;
+    width: 100%;
+  }
 }
