--- a/src/Style/Home/Home.css
+++ b/src/Style/Home/Home.css
@@ -170,15 +170,15 @@
 .product .prodHead .prodBtn button {
   width: 250px;
 }
-.product .prodHead .prodBtn img {
-  width: 50px;
-  rotate: 45deg;
-  border-radius: 50%;
-  transition: all 0.5s ease;
+
+.LogoDisp {
+  position: relative;
+  z-index: 1;
+  text-align: -webkit-center;
 }
-.product .prodHead .prodBtn img:hover {
-  box-shadow: 0px 0px 5px #a61853;
-  rotate: 0deg;
+.LogoDisp img {
+  width: 60%;
+  transition: all 2s ease;
 }
 
 @media (max-width: 800px) {
