--- a/src/Style/Home/Home.scss
+++ b/src/Style/Home/Home.scss
@@ -188,20 +188,21 @@
       button {
         width: 250px;
       }
-      img {
-        width: 50px;
-        rotate: 45deg;
-        border-radius: 50%;
-        transition: all 0.5s ease;
-
-        &:hover {
-          box-shadow: 0px 0px 5px #a61853;
-          rotate: 0deg;
-        }
-      }
     }
   }
 }
+
+.LogoDisp{
+  position: relative;
+    z-index: 1;
+    text-align: -webkit-center;
+
+    img{
+      width: 60%;
+      transition: all 2s ease;
+    }
+}
+
 // Media query
 @media (max-width: 800px) {
   .hero {
