--- a/src/Style/Home/Home.scss
+++ b/src/Style/Home/Home.scss
@@ -159,6 +159,7 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: stretch;
+  margin-bottom: 10vh;
   z-index: 2;
 
   .prodHead {
