blog image hover animation completed

--- a/src/Style/Component/Component.scss
+++ b/src/Style/Component/Component.scss
@@ -312,28 +312,47 @@ aside p {
   position: relative;
   color: black;
   text-transform: uppercase;
-
+.postItem{
+  position: relative;
+  color: inherit;
+  text-decoration: none;
+  &:hover{
+    color: inherit;
+  }
+  &:last-of-type .post {
+    border-bottom: 2px solid rgba(128, 128, 128, 0);
+  }
+}
   .post {
+    position: relative;
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
     padding-block: 2vh;
-    border-bottom: 1px solid grey;
     filter: opacity(0.5);
-    transition: all 0.5s ease-in-out;
+    border-bottom: 2px solid grey;
+    transition: border-bottom 0.1s ease, all 0.5s ease-in-out;
+
     &:hover {
       filter: opacity(1);
       cursor: pointer;
+      border-bottom: 2px solid rgb(50, 50, 50);
+    }
+     
 
       .arrow{
         rotate: 0deg;
       }
-    }
-    &:last-of-type {
-      border-bottom: 1px solid rgba(128, 128, 128, 0);
-    }
     
+    
+  }
+  .postImg{
+    position: absolute;
+    height: 300px;
+    width: 400px;
+    border-radius: 20px;
+    object-fit: cover;
   }
   .metaInfo {
     display: inline-flex;
