--- a/src/Style/Component/Component.css
+++ b/src/Style/Component/Component.css
@@ -215,25 +215,43 @@ aside p {
   color: black;
   text-transform: uppercase;
 }
+.blog .postItem {
+  position: relative;
+  color: inherit;
+  text-decoration: none;
+}
+.blog .postItem:hover {
+  color: inherit;
+}
+.blog .postItem:last-of-type .post {
+  border-bottom: 2px solid rgba(128, 128, 128, 0);
+}
 .blog .post {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
   padding-block: 2vh;
-  border-bottom: 1px solid grey;
   filter: opacity(0.5);
-  transition: all 0.5s ease-in-out;
+  border-bottom: 2px solid grey;
+  transition: border-bottom 0.1s ease, all 0.5s ease-in-out;
 }
 .blog .post:hover {
   filter: opacity(1);
   cursor: pointer;
+  border-bottom: 2px solid rgb(50, 50, 50);
 }
-.blog .post:hover .arrow {
+.blog .post .arrow {
   rotate: 0deg;
 }
-.blog .post:last-of-type {
-  border-bottom: 1px solid rgba(128, 128, 128, 0);
+.blog .postImg {
+  position: absolute;
+  height: 300px;
+  width: 400px;
+  border-radius: 20px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .blog .metaInfo {
   display: inline-flex;
