--- a/src/index.css
+++ b/src/index.css
@@ -52,13 +52,11 @@ html {
 
 a {
   font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+  color: inherit;
+  text-decoration: none;
+  transition: all 0.5s ease;
 }
 
-a:hover {
-  color: #535bf2;
-}
 
 body {
   width: calc(100vw - 5px);
