--- a/src/Style/Contact/contact.css
+++ b/src/Style/Contact/contact.css
@@ -30,8 +30,10 @@
 }
 
 #contact-form {
+  display: flex;
+  flex-direction: column;
   min-height: 400px;
-  color: #fff;
+  color: var(--text-dark);
   padding-block: 20px;
 }
 #contact-form input, #contact-form textarea {
@@ -41,7 +43,8 @@
   margin-bottom: 15px !important;
   border-radius: 20px;
   background: none;
-  border: 1px solid;
+  color: var(--text-dark);
+  border: 1px solid var(--text-dark);
 }
 #contact-form input:focus-visible, #contact-form textarea:focus-visible {
   outline: none;
@@ -51,9 +54,16 @@
   resize: vertical;
 }
 #contact-form button {
-  width: 100%;
+  width: 70%;
   color: #fff;
   margin-bottom: 15px;
+  align-self: center;
+  background-color: var(--accent);
+  box-shadow: 0px 0px 5px #430a22;
+  transition: all 0.4s ease;
+}
+#contact-form button:hover {
+  box-shadow: 0px 0px 10px #a61853;
 }
 #contact-form span.not-visible {
   display: none;
@@ -151,6 +161,7 @@
 }
 .cont-detail ul li svg {
   margin-bottom: 1em;
+  fill: var(--text-dark);
 }
 
 @media (max-width: 1100px) {
@@ -175,5 +186,10 @@
     align-items: baseline;
     margin-block: 5vh;
     /* align-content: flex-start; */
+  }
+  .cont-info-text h1 {
+    text-align: center;
+    font-size: clamp(3.25rem, 10vw, 10.25rem);
+    margin-right: 0;
   }
 }/*# sourceMappingURL=contact.css.map */
