--- a/src/Style/Home/Home.scss
+++ b/src/Style/Home/Home.scss
@@ -126,9 +126,11 @@
 }
 
 .redText {
+  scroll-snap-type: block;
   .text {
     position: relative;
     width: 60%;
+    color: white;
     margin: auto;
     padding: 1em;
     text-transform: uppercase;
