--- a/src/index.css
+++ b/src/index.css
@@ -139,10 +139,11 @@ img{
 
 ::-webkit-scrollbar {
   width: 5px;
+  background: rgba(0, 0, 0, 0.75);
 }
 
 ::-webkit-scrollbar-thumb {
-  background: rgba(255, 255, 255, .05);
+  background: rgba(255, 255, 255, 0.4);
   border-radius: 99px;
 }
 
